gen/libdwf_api.jl


function FDwfAnalogInTriggerPositionInfo(hdwf, psecMin, psecMax, pnSteps)
    ccall((:FDwfAnalogInTriggerPositionInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax, pnSteps)
end

function FDwfAnalogInTriggerPositionSet(hdwf, secPosition)
    ccall((:FDwfAnalogInTriggerPositionSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secPosition)
end

function FDwfAnalogInTriggerPositionGet(hdwf, psecPosition)
    ccall((:FDwfAnalogInTriggerPositionGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecPosition)
end

function FDwfAnalogInTriggerPositionStatus(hdwf, psecPosition)
    ccall((:FDwfAnalogInTriggerPositionStatus, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecPosition)
end

function FDwfAnalogInTriggerAutoTimeoutInfo(hdwf, psecMin, psecMax, pnSteps)
    ccall((:FDwfAnalogInTriggerAutoTimeoutInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax, pnSteps)
end

function FDwfAnalogInTriggerAutoTimeoutSet(hdwf, secTimeout)
    ccall((:FDwfAnalogInTriggerAutoTimeoutSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secTimeout)
end

function FDwfAnalogInTriggerAutoTimeoutGet(hdwf, psecTimeout)
    ccall((:FDwfAnalogInTriggerAutoTimeoutGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecTimeout)
end

function FDwfAnalogInTriggerHoldOffInfo(hdwf, psecMin, psecMax, pnStep)
    ccall((:FDwfAnalogInTriggerHoldOffInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax, pnStep)
end

function FDwfAnalogInTriggerHoldOffSet(hdwf, secHoldOff)
    ccall((:FDwfAnalogInTriggerHoldOffSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secHoldOff)
end

function FDwfAnalogInTriggerHoldOffGet(hdwf, psecHoldOff)
    ccall((:FDwfAnalogInTriggerHoldOffGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecHoldOff)
end

function FDwfAnalogInTriggerTypeInfo(hdwf, pfstrigtype)
    ccall((:FDwfAnalogInTriggerTypeInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigtype)
end

function FDwfAnalogInTriggerTypeSet(hdwf, trigtype)
    ccall((:FDwfAnalogInTriggerTypeSet, libdwf), BOOL, (HDWF, TRIGTYPE), hdwf, trigtype)
end

function FDwfAnalogInTriggerTypeGet(hdwf, ptrigtype)
    ccall((:FDwfAnalogInTriggerTypeGet, libdwf), BOOL, (HDWF, Ptr{TRIGTYPE}), hdwf, ptrigtype)
end

function FDwfAnalogInTriggerChannelInfo(hdwf, pidxMin, pidxMax)
    ccall((:FDwfAnalogInTriggerChannelInfo, libdwf), BOOL, (HDWF, Ptr{Cint}, Ptr{Cint}), hdwf, pidxMin, pidxMax)
end

function FDwfAnalogInTriggerChannelSet(hdwf, idxChannel)
    ccall((:FDwfAnalogInTriggerChannelSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfAnalogInTriggerChannelGet(hdwf, pidxChannel)
    ccall((:FDwfAnalogInTriggerChannelGet, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pidxChannel)
end

function FDwfAnalogInTriggerFilterInfo(hdwf, pfsfilter)
    ccall((:FDwfAnalogInTriggerFilterInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfsfilter)
end

function FDwfAnalogInTriggerFilterSet(hdwf, filter)
    ccall((:FDwfAnalogInTriggerFilterSet, libdwf), BOOL, (HDWF, FILTER), hdwf, filter)
end

function FDwfAnalogInTriggerFilterGet(hdwf, pfilter)
    ccall((:FDwfAnalogInTriggerFilterGet, libdwf), BOOL, (HDWF, Ptr{FILTER}), hdwf, pfilter)
end

function FDwfAnalogInTriggerLevelInfo(hdwf, pvoltsMin, pvoltsMax, pnSteps)
    ccall((:FDwfAnalogInTriggerLevelInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pvoltsMin, pvoltsMax, pnSteps)
end

function FDwfAnalogInTriggerLevelSet(hdwf, voltsLevel)
    ccall((:FDwfAnalogInTriggerLevelSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, voltsLevel)
end

function FDwfAnalogInTriggerLevelGet(hdwf, pvoltsLevel)
    ccall((:FDwfAnalogInTriggerLevelGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, pvoltsLevel)
end

function FDwfAnalogInTriggerHysteresisInfo(hdwf, pvoltsMin, pvoltsMax, pnSteps)
    ccall((:FDwfAnalogInTriggerHysteresisInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, pvoltsMin, pvoltsMax, pnSteps)
end

function FDwfAnalogInTriggerHysteresisSet(hdwf, voltsLevel)
    ccall((:FDwfAnalogInTriggerHysteresisSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, voltsLevel)
end

function FDwfAnalogInTriggerHysteresisGet(hdwf, pvoltsHysteresis)
    ccall((:FDwfAnalogInTriggerHysteresisGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, pvoltsHysteresis)
end

function FDwfAnalogInTriggerConditionInfo(hdwf, pfstrigcond)
    ccall((:FDwfAnalogInTriggerConditionInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstrigcond)
end

function FDwfAnalogInTriggerConditionSet(hdwf, trigcond)
    ccall((:FDwfAnalogInTriggerConditionSet, libdwf), BOOL, (HDWF, DwfTriggerSlope), hdwf, trigcond)
end

function FDwfAnalogInTriggerConditionGet(hdwf, ptrigcond)
    ccall((:FDwfAnalogInTriggerConditionGet, libdwf), BOOL, (HDWF, Ptr{DwfTriggerSlope}), hdwf, ptrigcond)
end

function FDwfAnalogInTriggerLengthInfo(hdwf, psecMin, psecMax, pnSteps)
    ccall((:FDwfAnalogInTriggerLengthInfo, libdwf), BOOL, (HDWF, Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, psecMin, psecMax, pnSteps)
end

function FDwfAnalogInTriggerLengthSet(hdwf, secLength)
    ccall((:FDwfAnalogInTriggerLengthSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, secLength)
end

function FDwfAnalogInTriggerLengthGet(hdwf, psecLength)
    ccall((:FDwfAnalogInTriggerLengthGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psecLength)
end

function FDwfAnalogInTriggerLengthConditionInfo(hdwf, pfstriglen)
    ccall((:FDwfAnalogInTriggerLengthConditionInfo, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfstriglen)
end

function FDwfAnalogInTriggerLengthConditionSet(hdwf, triglen)
    ccall((:FDwfAnalogInTriggerLengthConditionSet, libdwf), BOOL, (HDWF, TRIGLEN), hdwf, triglen)
end

function FDwfAnalogInTriggerLengthConditionGet(hdwf, ptriglen)
    ccall((:FDwfAnalogInTriggerLengthConditionGet, libdwf), BOOL, (HDWF, Ptr{TRIGLEN}), hdwf, ptriglen)
end

function FDwfAnalogInSamplingSourceSet(hdwf, trigsrc)
    ccall((:FDwfAnalogInSamplingSourceSet, libdwf), BOOL, (HDWF, TRIGSRC), hdwf, trigsrc)
end

function FDwfAnalogInSamplingSourceGet(hdwf, ptrigsrc)
    ccall((:FDwfAnalogInSamplingSourceGet, libdwf), BOOL, (HDWF, Ptr{TRIGSRC}), hdwf, ptrigsrc)
end

function FDwfAnalogInSamplingSlopeSet(hdwf, slope)
    ccall((:FDwfAnalogInSamplingSlopeSet, libdwf), BOOL, (HDWF, DwfTriggerSlope), hdwf, slope)
end

function FDwfAnalogInSamplingSlopeGet(hdwf, pslope)
    ccall((:FDwfAnalogInSamplingSlopeGet, libdwf), BOOL, (HDWF, Ptr{DwfTriggerSlope}), hdwf, pslope)
end

function FDwfAnalogInSamplingDelaySet(hdwf, sec)
    ccall((:FDwfAnalogInSamplingDelaySet, libdwf), BOOL, (HDWF, Cdouble), hdwf, sec)
end

function FDwfAnalogInSamplingDelayGet(hdwf, psec)
    ccall((:FDwfAnalogInSamplingDelayGet, libdwf), BOOL, (HDWF, Ptr{Cdouble}), hdwf, psec)
end

function FDwfAnalogOutCount(hdwf, pcChannel)
    ccall((:FDwfAnalogOutCount, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcChannel)
end

function FDwfAnalogOutMasterSet(hdwf, idxChannel, idxMaster)
    ccall((:FDwfAnalogOutMasterSet, libdwf), BOOL, (HDWF, Cint, Cint), hdwf, idxChannel, idxMaster)
end

function FDwfAnalogOutMasterGet(hdwf, idxChannel, pidxMaster)
    ccall((:FDwfAnalogOutMasterGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pidxMaster)
end

function FDwfAnalogOutTriggerSourceSet(hdwf, idxChannel, trigsrc)
    ccall((:FDwfAnalogOutTriggerSourceSet, libdwf), BOOL, (HDWF, Cint, TRIGSRC), hdwf, idxChannel, trigsrc)
end

function FDwfAnalogOutTriggerSourceGet(hdwf, idxChannel, ptrigsrc)
    ccall((:FDwfAnalogOutTriggerSourceGet, libdwf), BOOL, (HDWF, Cint, Ptr{TRIGSRC}), hdwf, idxChannel, ptrigsrc)
end

function FDwfAnalogOutTriggerSlopeSet(hdwf, idxChannel, slope)
    ccall((:FDwfAnalogOutTriggerSlopeSet, libdwf), BOOL, (HDWF, Cint, DwfTriggerSlope), hdwf, idxChannel, slope)
end

function FDwfAnalogOutTriggerSlopeGet(hdwf, idxChannel, pslope)
    ccall((:FDwfAnalogOutTriggerSlopeGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfTriggerSlope}), hdwf, idxChannel, pslope)
end

function FDwfAnalogOutRunInfo(hdwf, idxChannel, psecMin, psecMax)
    ccall((:FDwfAnalogOutRunInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, psecMin, psecMax)
end

function FDwfAnalogOutRunSet(hdwf, idxChannel, secRun)
    ccall((:FDwfAnalogOutRunSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, secRun)
end

function FDwfAnalogOutRunGet(hdwf, idxChannel, psecRun)
    ccall((:FDwfAnalogOutRunGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, psecRun)
end

function FDwfAnalogOutRunStatus(hdwf, idxChannel, psecRun)
    ccall((:FDwfAnalogOutRunStatus, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, psecRun)
end

function FDwfAnalogOutWaitInfo(hdwf, idxChannel, psecMin, psecMax)
    ccall((:FDwfAnalogOutWaitInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, psecMin, psecMax)
end

function FDwfAnalogOutWaitSet(hdwf, idxChannel, secWait)
    ccall((:FDwfAnalogOutWaitSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, secWait)
end

function FDwfAnalogOutWaitGet(hdwf, idxChannel, psecWait)
    ccall((:FDwfAnalogOutWaitGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, psecWait)
end

function FDwfAnalogOutRepeatInfo(hdwf, idxChannel, pnMin, pnMax)
    ccall((:FDwfAnalogOutRepeatInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}, Ptr{Cint}), hdwf, idxChannel, pnMin, pnMax)
end

function FDwfAnalogOutRepeatSet(hdwf, idxChannel, cRepeat)
    ccall((:FDwfAnalogOutRepeatSet, libdwf), BOOL, (HDWF, Cint, Cint), hdwf, idxChannel, cRepeat)
end

function FDwfAnalogOutRepeatGet(hdwf, idxChannel, pcRepeat)
    ccall((:FDwfAnalogOutRepeatGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pcRepeat)
end

function FDwfAnalogOutRepeatStatus(hdwf, idxChannel, pcRepeat)
    ccall((:FDwfAnalogOutRepeatStatus, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pcRepeat)
end

function FDwfAnalogOutRepeatTriggerSet(hdwf, idxChannel, fRepeatTrigger)
    ccall((:FDwfAnalogOutRepeatTriggerSet, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fRepeatTrigger)
end

function FDwfAnalogOutRepeatTriggerGet(hdwf, idxChannel, pfRepeatTrigger)
    ccall((:FDwfAnalogOutRepeatTriggerGet, libdwf), BOOL, (HDWF, Cint, Ptr{BOOL}), hdwf, idxChannel, pfRepeatTrigger)
end

function FDwfAnalogOutLimitationInfo(hdwf, idxChannel, pMin, pMax)
    ccall((:FDwfAnalogOutLimitationInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}, Ptr{Cdouble}), hdwf, idxChannel, pMin, pMax)
end

function FDwfAnalogOutLimitationSet(hdwf, idxChannel, limit)
    ccall((:FDwfAnalogOutLimitationSet, libdwf), BOOL, (HDWF, Cint, Cdouble), hdwf, idxChannel, limit)
end

function FDwfAnalogOutLimitationGet(hdwf, idxChannel, plimit)
    ccall((:FDwfAnalogOutLimitationGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cdouble}), hdwf, idxChannel, plimit)
end

function FDwfAnalogOutModeSet(hdwf, idxChannel, mode)
    ccall((:FDwfAnalogOutModeSet, libdwf), BOOL, (HDWF, Cint, DwfAnalogOutMode), hdwf, idxChannel, mode)
end

function FDwfAnalogOutModeGet(hdwf, idxChannel, pmode)
    ccall((:FDwfAnalogOutModeGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfAnalogOutMode}), hdwf, idxChannel, pmode)
end

function FDwfAnalogOutIdleInfo(hdwf, idxChannel, pfsidle)
    ccall((:FDwfAnalogOutIdleInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsidle)
end

function FDwfAnalogOutIdleSet(hdwf, idxChannel, idle)
    ccall((:FDwfAnalogOutIdleSet, libdwf), BOOL, (HDWF, Cint, DwfAnalogOutIdle), hdwf, idxChannel, idle)
end

function FDwfAnalogOutIdleGet(hdwf, idxChannel, pidle)
    ccall((:FDwfAnalogOutIdleGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfAnalogOutIdle}), hdwf, idxChannel, pidle)
end

function FDwfAnalogOutNodeInfo(hdwf, idxChannel, pfsnode)
    ccall((:FDwfAnalogOutNodeInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsnode)
end
